[gd_scene load_steps=10 format=3 uid="uid://y61iei1h07ny"]

[ext_resource type="Texture2D" uid="uid://8vaayvxfegom" path="res://Assets/Sprites/UI/Inventory_Menu/ItemPanel.png" id="1_rxn4w"]
[ext_resource type="Texture2D" uid="uid://di3cdwrrsg20g" path="res://Assets/Sprites/UI/Inventory_Menu/ItemPanel-selected.png" id="2_1u7py"]
[ext_resource type="Texture2D" uid="uid://dr2xfqne2pt1t" path="res://Assets/Sprites/UI/Inventory_Menu/ItemPanel-hover.png" id="3_kvns1"]
[ext_resource type="Script" uid="uid://c3h81jme5wgoq" path="res://Scripts/inventory_item.gd" id="4_8m6tt"]
[ext_resource type="FontFile" uid="uid://d3141f31fy1qx" path="res://Assets/Fonts/windows_command_prompt.ttf" id="4_40t36"]
[ext_resource type="AudioStream" uid="uid://0yas1r1x84cf" path="res://Assets/music/UISFX/digital-click-357350.mp3" id="6_1846r"]
[ext_resource type="AudioStream" uid="uid://c86q178tdsebx" path="res://Assets/music/UISFX/menu-selection-102220.mp3" id="7_uhmjl"]
[ext_resource type="AudioStream" uid="uid://dbt76nhpcpoco" path="res://Assets/music/UISFX/pause-89443.mp3" id="8_dffpw"]
[ext_resource type="AudioStream" uid="uid://dlvkp156wjdrl" path="res://Assets/music/UISFX/unpause-106278.mp3" id="9_2cycn"]

[node name="InventoryItem" type="TextureButton"]
anchors_preset = -1
anchor_right = 0.277778
anchor_bottom = 0.0740741
offset_right = -320.0
offset_bottom = -48.0
texture_normal = ExtResource("1_rxn4w")
texture_pressed = ExtResource("2_1u7py")
texture_hover = ExtResource("3_kvns1")
script = ExtResource("4_8m6tt")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009375
anchor_top = 0.0625
anchor_right = 0.960938
anchor_bottom = 0.90625
offset_right = -101.5
offset_bottom = -13.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.352941, 0.211765, 0.0784314, 1)
theme_override_fonts/font = ExtResource("4_40t36")
text = "Item Name x1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SFX" type="Node2D" parent="."]
process_mode = 3

[node name="ClickSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_1846r")

[node name="HoverSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_uhmjl")

[node name="PauseSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_dffpw")

[node name="UnpauseSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_2cycn")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
